# wpg

./: .gitignore  CMakeLists.txt  LICENSE  READ.MD  README.MD  README.md  matlab_plotter_mavros.m  matlab_plotter_mavros.m~  matlab_plotter_mavros_v2.m  package.xml  test.m  tester_interpolation.m
Scripts/: SMC_basic.py  fuzzy_fabio.py  fuzzy_v.py  fuzzy_v_2.py  fuzzy_v_py3.py  set_point.py  teste.py  utils.py  v6_fuzzy_vel_smc_py3.py  velocity.py
Scripts/old/: fuzzy_fabio.py  fuzzy_v.py  fuzzy_v_3.py  utils.py  v2_position.py  v3_velocity.py  v5_fuzzy_py3.py
Scripts/tests/: gui.py
_matlab_fuzzy_model/: Guizzy2.fis  fuz_model.slx  fuz_model.slx.autosave  fuz_model.slxc
ext_packg/: py_pkg_ros
msg/: defuzzyfied.msg  fuzzy.msg  vehicle_smc_gains.msg
