<?xml version="1.0"?>
<package>
  <name>wpg</name>
  <version>0.0.0</version>
  <description>The pImgs package</description>

  <maintainer email="viki@todo.todo">viki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  	
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libmavconn</build_depend>

  <run_depend>mavros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libmavconn</run_depend>

  <export>
  </export>
</package>
